[package]
name = "guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "./src/lib.rs"

[features]
guest = []

[dependencies]
k256 = { version = "0.13.3", default-features = false, features = ["schnorr"] }
jolt = { package = "jolt-sdk", git = "https://github.com/a16z/jolt" }
# rsa = { version = "0.9.6", default-features = false, features = ["sha2"] }
